kustomization/vault-router/base/vault-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-route
  namespace: vault
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: home-gateway
      namespace: default
  hostnames:
    - vault.faberge-eggs.ru
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: vault-ui
          port: 8200
          weight: 1
